# QuantumChain

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  temp-plot.html
Blockchain/: api.py  block.py  blockchain.py  blockchain_data.json  clean.sh  config.json  config.py  main.py  miner.json  miner.py  miners.json  stopControl.py  test.py  transaction.py
Blockchain/miners_blockchain/: blockchain_data_Miner1.json  blockchain_data_Miner10.json  blockchain_data_Miner2.json  blockchain_data_Miner3.json  blockchain_data_Miner4.json  blockchain_data_Miner5.json  blockchain_data_Miner6.json  blockchain_data_Miner7.json  blockchain_data_Miner8.json  blockchain_data_Miner9.json
general/: general.py
general/templates/general/: blockchains_overview.html  index.html  miners.html  test_index.html  view_blockchain.html
static/assets/css/: style.css  style.css.map
static/assets/js/: custom.js  deznav-init.js
static/assets/js/plugins-init/: chartist-init.js  datatables.init.js  morris-init.js  sweetalert-init.js  sweetalert.init.js
static/assets/scss/abstracts/: _bs-custom.scss  _variable.scss
static/assets/scss/base/: _reset.scss
static/assets/scss/components/app/: _app-calender-event.scss  _email.scss  _profile.scss
static/assets/scss/components/charts/: _chart-chartjs.scss  _chart-flot.scss
static/assets/scss/pages/: _aikit.scss  _cms.scss  _homepage.scss  _page-auth.scss  _page-error.scss  _pages.scss  _task.scss  _user-mamagment.scss  _user.scss
templates/: header.html  javascript_includes.html  navbar.html  sidebar.html
(+25 files in other folders)
